// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BLOB.proto";
import "../ccsds_mal/IDENTIFIER.proto";
import "../ccsds_mal/LONG.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/USHORT.proto";


package ccsds_mc.protobuf;

message GroupDefinition {
extensions 6 to 106;

  optional ccsds_mal.protobuf.IDENTIFIER name = 1;
  optional ccsds_mal.protobuf.STRING description = 2;
  optional ccsds_mal.protobuf.BLOB objectType = 3;
  optional ccsds_mal.protobuf.USHORT domain = 4;
  repeated ccsds_mal.protobuf.LONG instanceIds = 5;
}
